# dependobuf

./: Cargo.toml  README.md  clippy.toml
.github/workflows/: code_check.yml
dbuf-core/: Cargo.toml
dbuf-core/src/ast/: elaborated.rs  mod.rs  operators.rs
dbuf-core/src/codegen/: ast.rs  codegen.rs  identifiers.rs  mod.rs  notes.md  object_id.rs  sample.rs  scope.rs  type_gen.rs
dbuf-core/src/parser/: lexer.rs  located_iter.rs  mod.rs  parser.rs  parser_impl.rs
dbuf-gen/: Cargo.toml
dbuf-gen/src/: ast.rs  caser.rs  codegen.rs  format.rs  identifiers.rs  lib.rs  notes.md  object_id.rs  scope.rs  stack_list.rs
dbuf-gen/src/ast/: from_elaborated.rs  mod.rs  node_id.rs
dbuf-gen/src/generate/: lookup.rs  mod.rs  namespace.rs  node.rs
dbuf-gen/src/kotlin_gen/: generate.rs  mod.rs  target.rs
dbuf-gen/src/rust_gen/: context.rs  generate.rs  mod.rs  prelude.rs
dbuf-gen/src/samples/: sample_2.rs  sample_3.rs
dbuf-gen/src/swift_gen/: generate.rs  mod.rs
dbuf-gen/tests/: canon.rs  common.rs  gen_tests.rs  semantics.rs  test.rs
dbuf-gen/tests/canon/: basic.rs  basic.rs-like  dependent_messages.rs  nat_vec.rs  nat_vec.rs-like
dbuf-gen/tests/common/: mod.rs
dbuf-gen/tests/kotlin/: canon.rs  canon_tests.rs
dbuf-gen/tests/rust/: canon.rs  canon_tests.rs  mod.rs  semantics.rs  semantics_tests.rs
dbuf-gen/tests/samples/: sample.rs  (+1 more)
dbuf-lsp/: Cargo.toml
dbuf-lsp/src/: handler_box.rs  lib.rs  main.rs
dbuf-lsp/tests/: action_tests.rs  diagnostic_tests.rs  navigation_tests.rs  sample.dbuf
runtime/dbuf-rust-runtime/: Cargo.toml  README.md
src/: ast.rs
(+83 files in other folders)
