[workspace]
members = ["dbuf-core", "dbuf-gen", "dbuf-lsp", "runtime/dbuf-rust-runtime"]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
dbuf-core = { path = "./dbuf-core" }
chumsky = { version = "0.10.1", features = ["pratt"] }
logos = "0.15.0"
unescape = "0.1.0"
pretty = "=0.12.3"
