[workspace]
members = ["dbuf-core", "dbuf-gen", "dbuf-lsp", "runtime/dbuf-rust-runtime"]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
dbuf-core = { path = "./dbuf-core" }
dbuf-rust-runtime = { path = "runtime/dbuf-rust-runtime" }

tokio = {version = "1.45.0", features = ["full"]}
tower-lsp = "0.20.0"
dashmap = "6.1.0"
pretty = "0.12.4" 
chumsky = { version = "0.10.1", features = ["pratt"] }
logos = "0.15.0"
unescape = "0.1.0"
strum = "0.27"
strum_macros = "0.27"
pretty_assertions = "1.4.1"
thiserror = "2.0.12"
